--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -11,15 +11,28 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.chaby.primeratarea.MainActivity">
 
+    <Button
+        android:text="@string/boton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button"
+        android:gravity="center_horizontal"
+        android:textSize="24sp"
+        android:textStyle="normal|bold"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="73dp" />
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
-        android:background="@drawable/marcianito"
-        android:layout_alignParentBottom="true"
+        android:background="@drawable/marciano"
+        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="11dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
@@ -28,25 +41,11 @@
         android:layout_height="wrap_content"
         android:text="@string/texto"
         android:textSize="?android:attr/windowTitleSize"
-        android:layout_above="@+id/button"
+        android:layout_marginRight="118dp"
+        android:layout_marginEnd="118dp"
+        android:layout_marginTop="15dp"
+        android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="193dp"
-        android:layout_marginEnd="193dp"
-        android:layout_marginBottom="29dp" />
-
-    <Button
-        android:text="@string/boton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/button"
-        android:gravity="center_horizontal"
-        android:textSize="34sp"
-        android:textStyle="normal|bold"
-        android:layout_centerVertical="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="18dp"
-        android:layout_marginEnd="18dp" />
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
